Fix most Checkstyle warnings
The remaining warnings require more careful consideration.